Revise backup and monitoring options for kubedb ui  (#571)
