# apis/wizards/v1alpha1/kubedbcom_clickhouse_editor_options_types.go
@@ -54,6 +54,8 @@ type KubedbcomClickhouseEditorOptionsSpecSpec struct {
 	DeletionPolicy DeletionPolicy     `json:"deletionPolicy"`
 	Configuration  string             `json:"configuration"`
 	Admin          AdminOptions       `json:"admin"`
+	Backup         BackupToolSpec     `json:"backup"`
+	Monitoring     MonitoringOperator `json:"monitoring"`
 }
 
 // +kubebuilder:validation:Enum=Standalone;Topology
