# apis/wizards/v1alpha1/kubedbcom_mariadb_editor_options_types.go
@@ -48,13 +48,15 @@ type KubedbcomMariadbEditorOptionsSpecSpec struct {
 	Labels map[string]string `json:"labels"`
 	Mode   GeneralMode       `json:"mode"`
 	// +optional
-	Replicas       int            `json:"replicas,omitempty"`
-	Persistence    Persistence    `json:"persistence"`
-	PodResources   PodResources   `json:"podResources"`
-	AuthSecret     AuthSecret     `json:"authSecret"`
-	DeletionPolicy DeletionPolicy `json:"deletionPolicy"`
-	Configuration  string         `json:"configuration"`
-	Admin          AdminOptions   `json:"admin"`
+	Replicas       int                `json:"replicas,omitempty"`
+	Persistence    Persistence        `json:"persistence"`
+	PodResources   PodResources       `json:"podResources"`
+	AuthSecret     AuthSecret         `json:"authSecret"`
+	DeletionPolicy DeletionPolicy     `json:"deletionPolicy"`
+	Configuration  string             `json:"configuration"`
+	Admin          AdminOptions       `json:"admin"`
+	Backup         BackupToolSpec     `json:"backup"`
+	Monitoring     MonitoringOperator `json:"monitoring"`
 }
 
 type MariadbAlertsSpecForm struct {
