# apis/wizards/v1alpha1/kubedbcom_mssqlserver_editor_options_types.go
@@ -55,6 +55,8 @@ type KubedbcomMssqlserverEditorOptionsSpecSpec struct {
 	DeletionPolicy DeletionPolicy      `json:"deletionPolicy"`
 	Configuration  string              `json:"configuration"`
 	Admin          AdminOptions        `json:"admin"`
+	Backup         BackupToolSpec      `json:"backup"`
+	Monitoring     MonitoringOperator  `json:"monitoring"`
 }
 
 // +kubebuilder:validation:Enum=Standalone;Topology
