# charts/kubedbcom-mssqlserver-editor-options/values.openapiv3_schema.yaml
@@ -900,65 +900,6 @@ properties:
             - default
             - toggle
             type: object
-          backup:
-            properties:
-              kubestash:
-                properties:
-                  encryptionSecret:
-                    description: ObjectReference contains enough information to let
-                      you inspect or modify the referred object.
-                    properties:
-                      name:
-                        type: string
-                      namespace:
-                        type: string
-                    required:
-                    - name
-                    - namespace
-                    type: object
-                  retentionPolicy:
-                    description: ObjectReference contains enough information to let
-                      you inspect or modify the referred object.
-                    properties:
-                      name:
-                        type: string
-                      namespace:
-                        type: string
-                    required:
-                    - name
-                    - namespace
-                    type: object
-                  schedule:
-                    type: string
-                  storageRef:
-                    description: ObjectReference contains enough information to let
-                      you inspect or modify the referred object.
-                    properties:
-                      name:
-                        type: string
-                      namespace:
-                        type: string
-                    required:
-                    - name
-                    - namespace
-                    type: object
-                required:
-                - encryptionSecret
-                - retentionPolicy
-                - storageRef
-                type: object
-              toggle:
-                type: boolean
-              tool:
-                default: KubeStash
-                enum:
-                - KubeStash
-                - Stash
-                type: string
-            required:
-            - toggle
-            - tool
-            type: object
           clusterIssuers:
             properties:
               available:
@@ -1494,19 +1435,11 @@ properties:
                         type: object
                     type: object
                 type: object
-              serviceMonitor:
-                properties:
-                  labels:
-                    additionalProperties:
-                      type: string
-                    type: object
-                type: object
               toggle:
                 type: boolean
             required:
             - agent
             - exporter
-            - serviceMonitor
             - toggle
             type: object
           storageClasses:
@@ -1546,7 +1479,6 @@ properties:
         required:
         - alert
         - archiver
-        - backup
         - clusterIssuers
         - clusterTier
         - databases
@@ -1568,6 +1500,65 @@ properties:
             format: password
             type: string
         type: object
+      backup:
+        properties:
+          kubestash:
+            properties:
+              encryptionSecret:
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
+              retentionPolicy:
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
+              schedule:
+                type: string
+              storageRef:
+                description: ObjectReference contains enough information to let you
+                  inspect or modify the referred object.
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
+            required:
+            - encryptionSecret
+            - retentionPolicy
+            - storageRef
+            type: object
+          toggle:
+            type: boolean
+          tool:
+            default: KubeStash
+            enum:
+            - KubeStash
+            - Stash
+            type: string
+        required:
+        - toggle
+        - tool
+        type: object
       configuration:
         type: string
       deletionPolicy:
@@ -1586,6 +1577,18 @@ properties:
         - Standalone
         - Topology
         type: string
+      monitoring:
+        properties:
+          serviceMonitor:
+            properties:
+              labels:
+                additionalProperties:
+                  type: string
+                type: object
+            type: object
+        required:
+        - serviceMonitor
+        type: object
       persistence:
         properties:
           size:
@@ -1690,9 +1693,11 @@ properties:
     required:
     - admin
     - authSecret
+    - backup
     - configuration
     - deletionPolicy
     - mode
+    - monitoring
     - persistence
     - podResources
     - replicas
